<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:title="@string/bottom_menu_home"
        android:id="@+id/bottomBar_myRefri"
        android:icon="@drawable/home"
         />
    <item
        android:title="@string/bottom_menu_price_check"
        android:id="@+id/bottomBar_price_check"
        android:icon="@drawable/sell"
         />
    <item
        android:title="@string/bottom_menu_recipe"
        android:id="@+id/bottomBar_recipe"
        android:icon="@android:drawable/ic_menu_compass"
         />
    <item
        android:title="@string/bottom_menu_others"
        android:id="@+id/bottomBar_others"
        android:icon="@android:drawable/ic_menu_help"
         />
</menu>