<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/md_theme_light_background"
    tools:context=".Authentication.LoginActivity">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/loginForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="24dp">

            <!-- 이메일 입력 -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_activity_hint_email"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="#369EFF"
                app:hintTextColor="#369EFF">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- 비밀번호 입력 -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/login_activity_hint_pwd"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="#369EFF"
                app:hintTextColor="#369EFF">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- 로그인 버튼 -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/login_activity_btn_login"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                app:backgroundTint="#369EFF"
                app:cornerRadius="12dp" />

            <!-- 회원가입 버튼 -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/login_activity_btn_register"
                android:textAllCaps="false"
                android:textColor="#369EFF"
                app:backgroundTint="@android:color/transparent"
                app:cornerRadius="12dp" />
        </LinearLayout>
    </FrameLayout>
</ScrollView>
